* unreleased - - Christophe Dumez <chris@qbittorrent.org> - v3.1.0
    - FEATURE: Add command line option to daemonize qbittorrent-nox (ngaro)
    - BUGFIX: Greatly improve RSS manager performance (closes #34)

* Thu Aug 09 2012 - Christophe Dumez <chris@qbittorrent.org> - v3.0.0
    - FEATURE: Brand new torrent addition dialog
    - FEATURE: Add the ability to choose the save path when using magnet links (mutoso)
    - FEATURE: Add support for adding multiple local torrents at once (Web UI)
    - COSMETIC: Improve style of left panel
    - BUGFIX: Lower panels no longer gets disabled
    - BUGFIX: Major code refactoring and various optimizations.
    - BUGFIX: No longer strip root folder from torrent files
    - OTHER: Drop support for libtorrent v0.14.x
    - OTHER: Drop support for Qt 4.5

* Sat Oct 08 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.0
    - FEATURE: Add file association settings to program preferences (Windows)
    - FEATURE: Add setting to ignore slow torrents in queueing system
    - FEATURE: Add advanced setting to announce to all trackers
    - FEATURE: Add support for anonymous mode (libtorrent >= v0.16)
    - FEATURE: Add quick "set as default save path" checkbox to torrent addition dialog (sledgehammer999)
    - BUGFIX: Add tray menu entry for toggling window visibility
    - BUGFIX: Fix execution log lines selection and copying
    - BUGFIX: Reduce CPU usage when running Web UI
    - BUGFIX: Save RSS items to disk regularly for safety
    - BUGFIX: Fix ratio calculation (use all_time_download)
    - BUGFIX: Fix torrent upload issues (Web UI)
    - BUGFIX: Fix some IE incompatibilities (Web UI)
    - COSMETIC: Display speed at the beginning of the Window title
    - COSMETIC: Several cosmetic fixes to the Web UI
    - COSMETIC: Make top toolbar follow system style
    - OTHER: Display libraries versions in about dialog (sledgehammer999)
    - OTHER: Display qBittorrent version in Web UI about dialog
