@@ -37,7 +37,7 @@
 						<ul>
 							<li><a id="uploadLink"><img class="MyMenuIcon" src="theme/list-add" width="16" height="16" onload="fixPNG(this)"/>_(&Add torrent file...)</a></li>
 							<li><a id="downloadLink"><img class="MyMenuIcon" src="theme/insert-link" width="16" height="16" onload="fixPNG(this)"/>_(Add &link to torrent...)</a></li>
-						  
+				                        <li class="divider"><a id="shutdownLink"><img class="MyMenuIcon" src="theme/application-exit" width="16" height="16" onload="fixPNG(this)"/>_(Exit qBittorrent)</a></li>		  
 						</ul>
 					</li>
 					<li>
@@ -66,7 +66,6 @@
 							<li><a id="aboutLink"><img class="MyMenuIcon" src="theme/help-about" width="16" height="16" onload="fixPNG(this)"/>_(&About)</a></li>
 						</ul>
 					</li>
-					<li><a class="returnFalse" id="shutdownLink">_(&Shutdown)</a></li>
 				</ul>
 			</div>
 			<div id="mochaToolbar">
